src/assets/css/styles.css
/*
    DEMO STYLE
*/

@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
body {
    font-family: 'Poppins', sans-serif;
    background: #fafafa;
}

p {
    font-family: 'Poppins', sans-serif;
    font-size: 0.7em;
    font-weight: 100;
    line-height: 1.7em;
    color: #999;
}

a,
a:hover,
a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

/*.navbar {
    padding: 30px 30px;
    background: #fff;
    border: none;
    border-radius: 0;
    margin-bottom: 40px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
}

.navbar-btn {
    box-shadow: none;
    outline: none !important;
    border: none;
}

.line {
    width: 100%;
    height: 1px;
    border-bottom: 1px dashed #ddd;
    margin: 40px 0;
}*/

/* ---------------------------------------------------
    SIDEBAR STYLE
----------------------------------------------------- */

.wrapper {
    display: flex;
    width: 100%;
}

#sidebar {
    width: 70px;
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    z-index: 999;
    background-color: #8b2f8a;
    /*background-image: linear-gradient(to bottom,#2b2628 20%,#2b2628 20%);*/  
    transition: all 0.2s;
    opacity: 0.8;
}

#sidebar.active {
    margin-left: -100px;
}

#sidebar .sidebar-header {
    padding: 12px;
    background: transparent;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}

#sidebar ul p {
    color: #fcefee;
    padding: 10px;
}

  #sidebar ul li a {
    padding: 10px;
    font-size: 0.7em;
    display: block;
    color: #fafafa;
    border-radius: 5px;
    margin-left: 5px;
    margin-right: 5px;
  }

#sidebar ul li a:hover {
    color: #fcefeeef;
    background: #ffffff8c;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
    color: #fcefee;
    background: #8b2f8a;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: inline-block;
    position: absolute;
    top: 100%;
    right: 45%;
}

ul ul a {
    font-size: 0.5em !important;
    padding-left: 10px !important;
    background: #8b2f8a;
}

ul.CTAs a {
    text-align: center;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

a.download {
    color: #7386D5;
}

a.article,
a.article:hover {
    background: #8b2f8a !important;
    color: #fff !important;
}

/* ---------------------------------------------------
    CONTENT STYLE
----------------------------------------------------- */

#content {
    width: calc(100% - 70px);
    padding: 40px;
    min-height: 100vh;
    transition: all 0.3s;
    position: absolute;
    top: 0;
    right: 0;
}

#content.active {
    width: 100%;
}

/* ---------------------------------------------------
    MEDIAQUERIES
----------------------------------------------------- */

@media (max-width: 768px) {
    #sidebar {
        margin-left: -100px;
    }
    #sidebar.active {
        margin-left: 0;
    }
    #content {
        width: 100%;
    }
    #content.active {
        width: calc(100% - 70px);
    }
    #sidebarCollapse span {
        display: none;
    }
}

@media (min-width: 768px) {
    #sidebarCollapse {
        visibility: hidden;
    }
}

